Lendo arquivo csv sem uso do scanner